--- a/luasrc/view/themes/argon_armygreen/footer.htm
+++ b/luasrc/view/themes/argon_armygreen/footer.htm
@@ -40,7 +40,7 @@
 %>
                 </div>
                 <footer class="mobile-hide">
-                    <a href="https://jq.qq.com/?_wv=1027&k=s7GHUQ4e">可爱动漫主题 <%= ver.luciname %> (<%= ver.luciversion %>)</a> /
+                    <a href="https://github.com/openwrt/luci">可爱动漫主题 <%= ver.luciname %> (<%= ver.luciversion %>)</a> /
                     <%= ver.distversion %>
                     <% if #categories > 1 then %>
                     <ul class="breadcrumb pull-right" id="modemenu">
