--- a/luasrc/view/themes/argon_armygreen/footer.htm
+++ b/luasrc/view/themes/argon_armygreen/footer.htm
@@ -40,7 +40,7 @@
 %>
                 </div>
                 <footer class="mobile-hide">
-                    <a href="https://qm.qq.com/cgi-bin/qm/qr?k=befIRBN_vBr3kTWys2T-ZOkJP6ly1VeA&noverify=0">可爱动漫主题 <%= ver.luciname %> (<%= ver.luciversion %>)</a> /
+                    <a href="https://space.bilibili.com/359789531">可爱动漫主题 <%= ver.luciname %> (<%= ver.luciversion %>)</a> /
                     <%= ver.distversion %>
                     <% if #categories > 1 then %>
                     <ul class="breadcrumb pull-right" id="modemenu">
