--- a/htdocs/luci-static/argon_armygreen/css/style.css
+++ b/htdocs/luci-static/argon_armygreen/css/style.css
@@ -130,6 +130,14 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icp-icon {
+    width: 5%;
+}
+
+.zhuoze-blog {
+    text-decoration: none;
+}
+
 .icon-dashboard:before {
     content: "\e906";
 }
